--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/popover": "^2.2.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@madzadev/audio-player": "^1.1.11",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-toolbar": "^1.0.4",
+    "@reactflow/node-resizer": "^2.2.6",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "reactflow": "^11.10.1"
   },
   "devDependencies": {
