--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.21.1",
     "reactflow": "^11.10.1"
   },
   "devDependencies": {
